Update the webpage

--- a/index.html
+++ b/index.html
@@ -135,13 +135,14 @@
 <section class="section">
     <div class="container is-max-desktop">
         <div class="columns is-centered has-text-centered">
-            <div class="column is-four-fifths">
+            <div class="column is-full">
                 <h2 class="title is-3">Demo Videos</h2>
             </div>
         </div>
         <div class="content has-text-centered">
-            <p>
-                These videos show agents tackling real-world economic tasks on the web. Playback is 5× speed.
+            <p class="has-text-justified mb-4">
+                These videos show agents tackling real-world economic tasks from EconWebArena on the web. Playback is
+                shown at 5× speed.
             </p>
         </div>
 
@@ -215,7 +216,7 @@
     <div class="container is-max-desktop">
         <!-- Figures Section -->
         <div class="columns is-centered">
-            <div class="column is-four-fifths">
+            <div class="column is-full">
                 <h2 class="title is-3 has-text-centered">EconWebArena</h2>
                 <p class="has-text-justified mb-4">
                     The EconWebArena benchmark covers a wide range of economic domains and task types. Each task is
@@ -229,7 +230,7 @@
         </div>
 
         <div class="columns is-centered">
-            <div class="column is-four-fifths">
+            <div class="column is-full">
                 <h2 class="title is-3 has-text-centered">Website Examples</h2>
                 <p class="has-text-justified mb-4">
                     The benchmark draws from 82 authoritative websites, including government portals, financial
@@ -326,7 +327,7 @@
             <div class="column is-full">
                 <h2 class="title is-3 has-text-centered">Model Performance</h2>
                 <p class="has-text-justified mb-4">
-                    We evaluate several state-of-the-art multimodal large language model (MLLM) agents on EconWebArena
+                    We evaluate several state-of-the-art LLM agents on EconWebArena
                     across major economic domains. The table below reports task success rates (SR) and average number of
                     steps on successful tasks. Human performance is shown for comparison.
                 </p>
@@ -449,7 +450,7 @@
 
         <!-- Paper Video. -->
         <div class="columns is-centered has-text-centered">
-            <div class="column is-four-fifths">
+            <div class="column is-full">
                 <h2 class="title is-3">Video</h2>
                 <p class="has-text-centered mb-4">
                     A short video summary of EconWebArena, its task design, and evaluation results.
@@ -461,6 +462,19 @@
             </div>
         </div>
         <!--/ Paper Video. -->
+
+        <!-- Takeaways. -->
+        <div class="columns is-centered">
+            <div class="column is-full">
+                <h2 class="title is-3 has-text-centered">Takeaway</h2>
+                <p class="has-text-justified mb-4">
+                    EconWebArena provides a challenging benchmark for evaluating agents on complex economic tasks in
+                    real-world web environments, revealing current models’ limitations in grounding, navigation, and
+                    multimodal reasoning.
+                </p>
+            </div>
+        </div>
+        <!--/ Takeaways. -->
     </div>
 </section>
 
