Update the webpage

--- a/index.html
+++ b/index.html
@@ -273,8 +273,11 @@
                                 number as a decimal with one digit after the decimal point, without percent symbols or
                                 other units.
                             </td>
-                            <td><a href="https://www.ons.gov.uk/" rel="noopener noreferrer"
-                                   target="_blank">ons.gov.uk</a></td>
+                            <td>
+                                <a href="https://www.ons.gov.uk/" rel="noopener noreferrer"
+                                   target="_blank">https://www.ons.gov.uk
+                                </a>
+                            </td>
                             <td>3.4</td>
                             <td>ons.gov.uk</td>
                         </tr>
@@ -286,7 +289,10 @@
                                 per gallon? Provide only the number as a decimal with three digits after the decimal
                                 point, without currency symbols, commas, or other units.
                             </td>
-                            <td><a href="https://www.eia.gov/" rel="noopener noreferrer" target="_blank">eia.gov</a>
+                            <td>
+                                <a href="https://www.eia.gov/" rel="noopener noreferrer" target="_blank">
+                                    https://www.eia.gov
+                                </a>
                             </td>
                             <td>4.418</td>
                             <td>eia.gov</td>
@@ -298,7 +304,10 @@
                                 United States as of March 31, 2025? Provide only the number as a decimal with two
                                 digits, in millions, without commas or other units.
                             </td>
-                            <td><a href="https://www.coxautoinc.com/" rel="noopener noreferrer" target="_blank">coxautoinc.com</a>
+                            <td>
+                                <a href="https://www.coxautoinc.com/" rel="noopener noreferrer" target="_blank">
+                                    https://www.coxautoinc.com
+                                </a>
                             </td>
                             <td>2.14</td>
                             <td>coxautoinc.com</td>
@@ -310,7 +319,10 @@
                                 funds rate on January 10, 2025? Provide only the number as a decimal with two digits,
                                 without percent symbols or other units.
                             </td>
-                            <td><a href="https://www.newyorkfed.org/" rel="noopener noreferrer" target="_blank">newyorkfed.org</a>
+                            <td>
+                                <a href="https://www.newyorkfed.org/" rel="noopener noreferrer" target="_blank">
+                                    https://www.newyorkfed.org
+                                </a>
                             </td>
                             <td>4.33</td>
                             <td>newyorkfed.org</td>
