Update the webpage

--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
     </div>
 </section>
 
-<!-- Demo Videos -->
 <section class="section">
     <div class="container is-max-desktop">
+        <!-- Demo Videos -->
         <div class="columns is-centered has-text-centered">
             <div class="column is-full">
                 <h2 class="title is-3">Demo Videos</h2>
@@ -208,14 +208,14 @@
                 </figure>
             </div>
         </div>
+        <!--/ Demo Videos -->
     </div>
 </section>
-<!--/ Demo Videos -->
 
 <section class="section">
     <div class="container is-max-desktop">
         <!-- Figures Section -->
-        <div class="columns is-centered">
+        <div class="columns is-centered mb-6">
             <div class="column is-full">
                 <h2 class="title is-3 has-text-centered">EconWebArena</h2>
                 <p class="has-text-justified mb-4">
@@ -229,7 +229,7 @@
             </div>
         </div>
 
-        <div class="columns is-centered">
+        <div class="columns is-centered mb-6">
             <div class="column is-full">
                 <h2 class="title is-3 has-text-centered">Website Examples</h2>
                 <p class="has-text-justified mb-4">
@@ -245,7 +245,7 @@
         <!--/ Figures Section -->
 
         <!-- Examples Table -->
-        <div class="columns is-centered">
+        <div class="columns is-centered mb-6">
             <div class="column is-full">
                 <h2 class="title is-3 has-text-centered">Task Examples</h2>
                 <p class="has-text-justified mb-4">
@@ -335,7 +335,7 @@
         <!--/ Examples Table -->
 
         <!-- Results Table -->
-        <div class="columns is-centered">
+        <div class="columns is-centered mb-6">
             <div class="column is-full">
                 <h2 class="title is-3 has-text-centered">Model Performance</h2>
                 <p class="has-text-justified mb-4">
@@ -461,7 +461,7 @@
         <!--/ Results Table -->
 
         <!-- Paper Video. -->
-        <div class="columns is-centered has-text-centered">
+        <div class="columns is-centered has-text-centered mb-6">
             <div class="column is-full">
                 <h2 class="title is-3">Video</h2>
                 <p class="has-text-centered mb-4">
@@ -476,7 +476,7 @@
         <!--/ Paper Video. -->
 
         <!-- Takeaways. -->
-        <div class="columns is-centered">
+        <div class="columns is-centered mb-6">
             <div class="column is-full">
                 <h2 class="title is-3 has-text-centered">Takeaway</h2>
                 <p class="has-text-justified mb-4">
