Update the webpage

--- a/index.html
+++ b/index.html
@@ -40,10 +40,14 @@
 
                     <!-- Authors. -->
                     <span class="author-block">
-                        <a href="https://zefang-liu.github.io/" target="_blank">Zefang Liu</a><sup>1,*</sup>,
+                        <a href="https://zefang-liu.github.io/" target="_blank">
+                            Zefang Liu
+                        </a><sup>1,*</sup>,
                     </span>
                     <span class="author-block">
-                        Yinzhu Quan<sup>1,*</sup>,
+                        <a href="https://www.linkedin.com/in/yinzhu-quan/" target="_blank">
+                            Yinzhu Quan
+                        </a><sup>1,*</sup>
                     </span>
                     <!--/ Authors. -->
 
