Update the video link

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <!-- Video Link. -->
                             <span class="link-block">
                                 <a class="external-link button is-normal is-rounded is-dark"
-                                   href="https://youtu.be/TwP3m2yWb7A">
+                                   href="https://youtu.be/FuHlF2i2jSU">
                                     <span class="icon"><i class="fab fa-youtube"></i></span>
                                     <span>Video</span>
                                 </a>
@@ -473,7 +473,7 @@
                 </p>
                 <div class="publication-video">
                     <iframe allow="autoplay; encrypted-media" allowfullscreen frameborder="0"
-                            src="https://www.youtube.com/embed/TwP3m2yWb7A"></iframe>
+                            src="https://www.youtube.com/embed/FuHlF2i2jSU"></iframe>
                 </div>
             </div>
         </div>
