--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
         <!-- Paper Video. -->
         <div class="columns is-centered has-text-centered mb-6">
             <div class="column is-full">
-                <h2 class="title is-3">Video</h2>
+                <h2 class="title is-3">Summary Video</h2>
                 <p class="has-text-centered mb-4">
                     A short video summary of EconWebArena, its task design, and evaluation results.
                 </p>
