Update the bibtex

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <!-- Paper Link. -->
                             <span class="link-block">
                                 <a class="external-link button is-normal is-rounded is-dark"
-                                   href="https://drive.google.com/file/d/1Q0dKx60HOgBNN6-ZW7ajS8L0gb_q-iF2/view?usp=sharing">
+                                   href="https://arxiv.org/abs/2506.08136">
                                     <span class="icon"><i class="fas fa-file-pdf"></i></span>
                                     <span>Paper</span>
                                 </a>
@@ -499,7 +499,8 @@
         <h2 class="title">BibTeX</h2>
         <pre><code>@article{liu2025econwebarena,
   title={EconWebArena: Benchmarking Autonomous Agents on Economic Tasks in Realistic Web Environments},
-  author={Zefang Liu and Yinzhu Quan},
+  author={Liu, Zefang and Quan, Yinzhu},
+  journal={arXiv preprint arXiv:2506.08136},
   year={2025}
 }</code></pre>
     </div>
